@@ -12,7 +12,9 @@ YACC=		/usr/bin/bison
 VERSTR=		$(shell if test -n "$(VERSION)"; then \
 		  if test -n "$(RELEASE)"; then \
                     echo $(PROJECT)-$(VERSION)-$(RELEASE); \
-                  else echo $(PROJECT)-$(VERSION); fi; fi)
+                  else \
+                    echo $(PROJECT)-$(VERSION); fi; \
+		else echo development; fi)
 
 DEFS=		-DHAVE_CONFIG_H -DPOWERMAN_VERSION=\"$(VERSTR)\"
 #DEFS+=		-DNDEBUG
